commit media file

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
     margin:0 5px;
 }
 .bg-image{
-  background-image: url('2.jpg');
+  background-image: url('nurudeen.webp');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
