--- a/pen1.css
+++ b/pen1.css
@@ -2,7 +2,12 @@
 	position: relative;
   z-index: 1000;
   max-width:350px;
-  padding: 150px 3px 0px 3px;
+  margin: auto;
+  min-height: 250px;
+  min-width: 250px;
+  max-height: 300px;
+  max-width: 300px;
+  margin-top: 150px;
 }
 /* canvas {
 	position: absolute;
