--- a/style.css
+++ b/style.css
@@ -38,7 +38,8 @@
     margin-top: 15px;
     padding: 5px;
     color: #efe375;
-    font-size: 1.2rem;
+    font-size: 1.05rem;
+    font-style: italic;
 }
 .today {
     font-size: 2.5rem;
